<resources>
    <string name="app_name">E-COMMERCE_APP(E-TICARET_MOBIL_UYGULAMASI)_KOTLIN</string>
    <string name="bring_neverything_is_nunder_your_nfingers">Bring.\nEverything is\nunder your\nfingers.</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account">Dont Have an Account?</string>
    <string name="create_a_new_one">Create a new one</string>
    <string name="we_missed_you_log_in_to_get_started">We missed you! Log in to get started</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_instead">Register instead.</string>
    <string name="register">Register</string>
    <string name="to_reach_all_your_needs">to reach all your needs.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="reg_ster">Regıster</string>
    <string name="continue_without_account">Continue without account</string>
    <string name="or">or</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="your_cart">Your cart</string>
    <string name="profile">Profile</string>
    <string name="what_do_you_seek_today">What do you seek today?</string>
    <string name="hello_egemen">Hello, Egemen</string>
    <string name="search_for_products">Search for products</string>
    <string name="discounts_amp_news"><![CDATA[Discounts & News]]></string>
    <string name="popular_around_you">Popular around you</string>
    <string name="browse_items_you_want_to_see">Browse items you want to see</string>
    <string name="discover">Discover</string>
    <string name="technology">Technology</string>
    <string name="home1">Home</string>
    <string name="Clothing">Wednesday</string>
    <string name="cloth_ng">Clothıng</string>
    <string name="see_details">See Details</string>
    <string name="about_me">About Me</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log out</string>
    <string name="youareregisteredsccflly">You are registered successfully.</string>
    <string name="pleaseenteryourname">Please enter your name.</string>
    <string name="pleaseenteryoursurname">Please enter your surname.</string>
    <string name="pleaseenterpassword">Please enter password.</string>
    <string name="pleaseenteremail">Please enter email.</string>
    <string name="s_gn_in">Sıgn In</string>
    <string name="yourelogginsuccesfully">You are Logged in Succesfully.</string>
    <string name="search_">Search...</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="hello">Hello</string>
</resources>