<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/helloText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover"
            android:textColor="#0080cd"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/browse_items_you_want_to_see"
            android:textColor="#0080cd" />


    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/edittextbackground"
        android:closeIcon="@drawable/ic_baseline_clear_24"
        android:focusable="false"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_"
        android:searchHintIcon="@null"
        android:searchIcon="@drawable/ic_baseline_search_24" />

    <!--<EditText
        android:id="@+id/searchForProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittextbackground"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/search_for_products"
        android:inputType="textPersonName"
        android:padding="20dp" />-->

    <com.google.android.material.tabs.TabLayout

        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloth_ng" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp" />


</LinearLayout>




