<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0080cd"
    android:elevation="10dp"
    android:orientation="vertical"
    android:scrollbarSize="25sp"
    tools:context=".LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backButton"

            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/loginbtnstyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_back"
            android:textAlignment="textStart"
            android:textColor="#F4F2F2"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="25dp"
            android:text="@string/we_missed_you_log_in_to_get_started"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="40dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableEnd="@drawable/ic_person"
                    android:ems="10"
                    android:hint="@string/enter_your_e_mail"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableEnd="@drawable/ic_lock"
                    android:ems="10"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:padding="15dp" />

                <CheckBox
                    android:id="@+id/rememberMe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/remember_me"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signInBtn"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/loginbtnstyle"
                    android:text="@string/s_gn_in"
                    android:textColor="#FFFFFF" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="70dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textButtonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_instead"
                        android:textColor="#0080CD"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/textView7"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>
