<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0080cd"
    android:elevation="10dp"
    android:orientation="vertical"
    android:scrollbarSize="25sp"
    tools:context=".LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backButton"

            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/loginbtnstyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textAlignment="textStart"
            android:textColor="#F4F2F2"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="25dp"
            android:text="@string/to_reach_all_your_needs"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="25dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/register"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/registerName"
                        android:layout_width="150dp"
                        android:layout_height="50dp"

                        android:layout_marginEnd="10dp"
                        android:background="@drawable/edittextbackground"
                        android:drawableEnd="@drawable/ic_person"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:padding="15dp" />

                    <EditText
                        android:id="@+id/registerSurname"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:background="@drawable/edittextbackground"
                        android:drawableEnd="@drawable/ic_person"
                        android:ems="10"
                        android:hint="@string/surname"
                        android:inputType="textPersonName"
                        android:padding="15dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableEnd="@drawable/ic_email"
                    android:ems="10"
                    android:hint="@string/enter_your_e_mail"
                    android:inputType="textPersonName"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableEnd="@drawable/ic_lock"
                    android:ems="10"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/confirmPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableEnd="@drawable/ic_lock"
                    android:ems="10"
                    android:hint="@string/confirm_your_password"
                    android:inputType="textPassword"
                    android:padding="15dp" />

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/loginbtnstyle"
                    android:text="@string/reg_ster"
                    android:textColor="#F6F6F6" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>
