<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0080cd"
    android:orientation="vertical"
    tools:context=".Fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/loginbtnstyle"
            android:drawableStart="@drawable/arrow_back"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_centerInParent="true">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginTop="40dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    tools:cardCornerRAdius="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/idTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="20dp"
                            android:layout_marginTop="30dp"
                            android:gravity="center"
                            android:text="Egemen Sevgi"
                            android:textColor="#0080cd"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilepic"

                android:layout_width="98dp"
                android:layout_height="98dp"
                android:layout_centerHorizontal="true"
                android:elevation="15dp"
                android:padding="5dp"
                android:src="@drawable/ic_launcher_background" />
        </RelativeLayout>


        <androidx.cardview.widget.CardView

            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:orientation="vertical">


                <Button
                    android:id="@+id/aboutMeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableStart="@drawable/ic_person2"
                    android:padding="20dp"
                    android:text="@string/about_me"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/previousBtn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableLeft="@drawable/ic_history"
                    android:padding="20dp"
                    android:text="Prevıous Orders"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/privacyBtn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableStart="@drawable/ic_policy"
                    android:padding="20dp"
                    android:text="@string/privacy_policy"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/logoutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittextbackground"
                    android:drawableStart="@drawable/ic_logout"
                    android:padding="20dp"
                    android:text="@string/log_out"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>


